@@ -1,0 +1,2 @@
+/* Stub file, templated */
+{{ sphinx_version }}
